# cloud_engineering

group4-codes-1/app/: Makefile  README.md  pyproject.toml
group4-codes-1/app/src/: app.py  aws_utils.py
group4-codes-1/model_experiments/: Cloud_Eng_Project.ipynb
group4-codes-1/pipeline/: kaggle.json  main.py  requirements.txt
group4-codes-1/pipeline/config/: 2023-config.yaml
group4-codes-1/pipeline/config/logging/: local.conf
group4-codes-1/pipeline/dockerfiles/: Dockerfile.pipe
group4-codes-1/pipeline/src/: acquire_data.py  aws_utils.py  eda.py  evaluate_performance.py  preprocess.py  train_model.py
