[tool.poetry]
name = "iris-app"
version = "0.1.0"
description = ""
authors = ["Michael Fedell <michaelfedell14@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.2.0"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
boto3 = "^1.26.123"
streamlit = "^1.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pylint = "^2.17.2"
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
